--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,52 @@ div.accordion-body {
   overflow-y: auto;
   margin: 0.5rem;
 }
+
+
+.float-right {
+  float: right;
+}
+
+
+/* classes for poicy timelines */
+ul.timeline {
+  list-style-type: none;
+  position: relative;
+}
+
+  ul.timeline:before {
+      content: ' ';
+      background: #d4d9df;
+      display: inline-block;
+      position: absolute;
+      left: 29px;
+      width: 2px;
+      height: 100%;
+      z-index: 400;
+  }
+
+  ul.timeline > li {
+      margin: 20px 0;
+      padding-left: 20px;
+  }
+
+      ul.timeline > li:before {
+          content: ' ';
+          background: white;
+          display: inline-block;
+          position: absolute;
+          border-radius: 50%;
+          border: 5px solid;
+          left: 20px;
+          width: 20px;
+          height: 20px;
+          z-index: 400;
+          margin-top: 4px;
+      }
+
+      ul.timeline > li.text-success:before {
+          border: 10px solid;
+      }
+      ul.timeline > li.text-info:before {
+          border: 8px solid;
+      }
